--- a/evolution.html
+++ b/evolution.html
@@ -40,65 +40,65 @@
     <div class="container left">
       <div class="content">
         <div class="h2-content">
-          <p>1894</p>
+          <h1>1669</h1>
         </div>
-        <img src="henn (2).jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
-        <p class = "first-timeline">Hennig Brand discovered Phosphorus..</p>
+        <img src="henn (2).jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #1DB954 ;z-index: 1;"></img>
+        <p class = "first-timeline">The discovery of phosphorus took place around the year 1669, during Brand's alchemical experiments. At that time, alchemists were engaged in various attempts to transmute base metals into noble metals like gold and to discover the philosopher's stone, a substance believed to have extraordinary properties.</p>
       </div>
     </div>    
     <div class="container right">
       <div class="content">
         <div class="h2-content">
-          <p>1892</p>
+          <h1>1892</h1>
         </div>
-        <img src="DPT_Dobereiner_3.jpg" style="border-radius: 50%;height: 20vh;width: 19vh;border: 4px solid #a8a3a3 ;"></img>
-        <p class = "second-timeline">Johann Dobereiner discovered the halogen triad and the alkali metal triad.</p>
+        <img src="DPT_Dobereiner_3.jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #1DB954;"></img>
+        <p class = "second-timeline">Johann Wolfgang Döbereiner (1780–1849) was a German chemist renowned for his pioneering work in the early 19th century. One of his most significant contributions was the discovery of the Law of Triads in 1829. He observed that certain groups of three elements, known as triads, exhibited similar chemical properties, and the atomic weight of the middle element was approximately the average of the other two.</p>
       </div>
     </div>
   
   <div class="container left">
     <div class="content">
       <div class="h2-content">
-        <p>1892</p>
+        <h1>1892</h1>
       </div>
-      <img src="periodic-table.png" style="border-radius: 10%;height: 20vh;width: 24vh;border: 1px solid #4c4c4c;"></img>
+      <img src="periodic-table.png" style="border-radius: 10%;height: 15vh;width: 20vh;border: 1px solid #4c4c4c;"></img>
       <p class = "third-timeline">The first periodic table was created by A.E.Beguyer de Chancourtois. He assembled the table by transcribing a list of the elements positioned on a cylinder in terms of increasing atomic weight.</p>
     </div>
   </div> 
   <div class="container right">
     <div class="content">
       <div class="h2-content">
-        <p>1892</p>
+        <h1>1892</h1>
       </div>
-      <img src="dimendeleevcab.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
-      <p class = "fourth-timeline">Russian Dmitri Mendeleev published his periodic table, eventually becoming the “father of the periodic table.</p>
+      <img src="dimendeleevcab.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #1DB954 ;"></img>
+      <p class = "fourth-timeline">Dmitri Mendeleev (1834–1907) was a Russian chemist who is widely recognized for his monumental contribution to the field of chemistry—the creation of the periodic table. Born in Siberia, Mendeleev's fascination with science and chemistry led him to pursue an extensive study of the properties of various elements.</p>
     </div>
   </div>    
   <div class="container left">
     <div class="content">
       <div class="h2-content">
-        <p>1892</p>
+        <h1>1892</h1>
       </div>
-      <img src="Ernest-Rutherford-oil-painting-J-Dunn-National-1932.webp" style="border-radius: 50%;height: 20vh;width: 19vh;border: 4px solid #a8a3a3 ;"></img>
-      <p class = "fourth-timeline"> Ernest Rutherford published studies of the scattering of alpha particles by heavy atom nuclei which led to the determination of nuclear charge.</p>
+      <img src="Ernest-Rutherford-oil-painting-J-Dunn-National-1932.webp" style="border-radius: 50%;height: 20vh;width: 19vh;border: 4px solid #1DB954 ;"></img>
+      <p class = "fourth-timeline"> Ernest Rutherford's groundbreaking studies on the scattering of alpha particles provided crucial insights into the structure of the atom. Through his experiments, he discovered that most of the atom's mass and positive charge were concentrated in a tiny, dense nucleus at the center. This led to the development of the Rutherford model of the atom,forming the basis of modern atomic theory. </p>
     </div>
   </div>    
   <div class="container right">
     <div class="content">
       <div class="h2-content">
-        <p>1892</p>
+        <h1>1892</h1>
       </div>
-      <img src="Moseley.jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
+      <img src="Moseley.jpg" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #1DB954 ;"></img>
       <p class="fifth-timeline"> Henry Moseley discovered that the ordering of the wavelengths of the x-ray emissions of the elements coincided with the ordering of the elements by atomic number. This discovery established that “the properties of the elements varied periodically with atomic number,” not atomic weight, which had been previously accepted under periodic law.</p>
     </div>
   </div>    
   <div class="container left">
     <div class="content">
       <div class="h2-content">
-        <p>1892</p>
+        <h1>1892</h1>
       </div>
-      <img src="Glenn-T-Seaborg-1968.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #a8a3a3 ;"></img>
-      <p class="sixth-timeline">Glenn Seaborg discovered plutonium and the transuranic elements from 94 to 102. His findings represented the last (and most recent) changes to the periodic table.</p>
+      <img src="Glenn-T-Seaborg-1968.webp" style="border-radius: 50%;height: 20vh;width: 20vh;border: 4px solid #1DB954 ;"></img>
+      <p class="sixth-timeline">Glenn Seaborg's groundbreaking discoveries of plutonium and the transuranic elements extended the periodic table beyond uranium (element 92) and expanded our understanding of the heavy elements. His work not only unveiled new elements but also contributed to the development of nuclear chemistry and the synthesis of elements through nuclear reactions.</p>
     </div>
   </div>
 </div>       
