Chep oru mandan

--- a/Test.html
+++ b/Test.html
@@ -4,25 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chemify</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="Test.css">
 </head>
 <body>
   <script src="index.js"></script>
-  <div class="main">
-    <section id="topbar">
-      <div><h3 class="logo"><a href="landing.html">Elemental<span>X</span></a></h3></div>
-      <div class="topbar-btn">
-        <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
-        <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
-        <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
-        <a class="topbar-a topbar-a-4" href="fax.html">Facts n Memes</a>
-      </div>
-    </section>
     <div class="elements-wiki">
-      <div class="iframe-container">
-        <img class="xmark" src="x mark.png">
-        <iframe src="https://en.wikipedia.org/wiki/helium" title="Hydrogen" id="wiki"></iframe>
-      </div>
     </div>
     <div class="periodic-table-container">
       <section class="periodic-table" id="periodic-table">
@@ -43,8 +29,8 @@
         <div class="element element15"><div class="element-atomic-details"><div class="element-atomic-no">15</div><div class="element-atomic-mass">30.97</div></div><div class="element-atomic-symbol">P</div><div class="element-atomic-name">Phosphorus</div></div>
         <div class="element element16"><div class="element-atomic-details"><div class="element-atomic-no">16</div><div class="element-atomic-mass">32.07</div></div><div class="element-atomic-symbol">S</div><div class="element-atomic-name">Sulfur</div></div>
         <div class="element element17"><div class="element-atomic-details"><div class="element-atomic-no">17</div><div class="element-atomic-mass">35.45</div></div><div class="element-atomic-symbol">Cl</div><div class="element-atomic-name">Chlorine</div></div>
-        <div class="element element18"><div class="element-atomic-details"><div class="element-atomic-no">18</div><div class="element-atomic-mass">39.1</div></div><div class="element-atomic-symbol">Ar</div><div class="element-atomic-name">Argon</div></div>
-        <div class="element element19"><div class="element-atomic-details"><div class="element-atomic-no">19</div><div class="element-atomic-mass">39.95</div></div><div class="element-atomic-symbol">K</div><div class="element-atomic-name">Potassium</div></div>
+        <div class="element element18"><div class="element-atomic-details"><div class="element-atomic-no">18</div><div class="element-atomic-mass">39.1</div></div><div class="element-atomic-symbol">K</div><div class="element-atomic-name">Argon</div></div>
+        <div class="element element19"><div class="element-atomic-details"><div class="element-atomic-no">19</div><div class="element-atomic-mass">39.95</div></div><div class="element-atomic-symbol">Ar</div><div class="element-atomic-name">Potassium</div></div>
         <div class="element element20"><div class="element-atomic-details"><div class="element-atomic-no">20</div><div class="element-atomic-mass">40.08</div></div><div class="element-atomic-symbol">Ca</div><div class="element-atomic-name">Calcium</div></div>
         <div class="element element21"><div class="element-atomic-details"><div class="element-atomic-no">21</div><div class="element-atomic-mass">44.96</div></div><div class="element-atomic-symbol">Sc</div><div class="element-atomic-name">Scandium</div></div>
         <div class="element element22"><div class="element-atomic-details"><div class="element-atomic-no">22</div><div class="element-atomic-mass">47.87</div></div><div class="element-atomic-symbol">Ti</div><div class="element-atomic-name">Titanium</div></div>
