--- a/equipment/equipment.html
+++ b/equipment/equipment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "equipment.css">
+    <script src="equipment.js" defer></script>
     <title>Equipment</title>
     <link rel="icon" href="https://img.icons8.com/bubbles/50/test-tube.png">
 </head>
@@ -49,7 +50,7 @@
 
     <div class="all-contents">
         <div id="Timepass"></div>
-        <div class="content content-left">
+        <!-- <div class="content content-left">
             <ul>
                 <h3>BEAKER</h3>
                 <li>Cylindrical utensils made up of borosilicate glass, with a flat bottom and the upper opening having a rim around
@@ -91,7 +92,7 @@
             <div class="img">
                 <img id="TEST_TUBE" src="imgs/TEST_TUBE.jpeg" alt="beaker">
             </div>
-        </div>
+        </div> -->
             <div class="content content-right">
                 <ul>
                     <h3>VOLUMETRIC FLASK</h3>
