--- a/landing.html
+++ b/landing.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chemify</title>
+  <title>ElementalX</title>
   <link rel="stylesheet" href="landing.css">
+  <link rel="icon" href="https://img.icons8.com/bubbles/50/test-tube.png">
 </head>
 <body>
   <section id="topbar">
@@ -25,6 +26,7 @@
       <img src="people.svg">
     </section>
     <section class="landing-2">
+      <img src="landing2.png">
       <div class="landing-2-content">
         <h2>Check Out our interactive periodic table</h2>
         <button>Check it Out</button>
