--- a/periodic table/index.html
+++ b/periodic table/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <script src="index.js"></script>
+  <script src="index.js" defer></script>
   <div class="main">
     <section id="topbar">
       <div>
