--- a/feedback.html
+++ b/feedback.html
@@ -21,7 +21,7 @@
         <h2>Let us if know if you have any feedback.</h2>
         <img class="img" src="DrawKit Vector Illustration Influencer & Content Creator Illustrations (2).png" alt="">
     </div>
-    <div class="forms-header"
+    <div class="forms-header">
         <div>
             <form class="forms">
               <h2>Feedback</h2>
@@ -56,7 +56,7 @@
   </div>
   <div class="popup" id="popup">
     <h2>Thank You</h2> 
-    <img src="check-mark.png">
+    <img src="check-mark.png" alt="" style="width: 2vw;">
     <p>Your feedback have been submitted</p> 
     <button class="done" onclick="closepop()">Ok</button>
   </div>
