Some changes were made

--- a/About page/About.html
+++ b/About page/About.html
@@ -26,10 +26,10 @@
 </div>
 <div id="heading">Our Team</div>
 <div id="create">
-<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">Naveed</div><div class="Desc">Description</div><button>-Know more-</button></div>
-<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">HK</div><div class="Desc">Description</div><button>-Know more-</button></div>
-<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">Rahul</div><div class="Desc">Description</div><button>-Know more-</button></div>
-<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">APN</div><div class="Desc">Description</div><button>-Know more-</button></div>
+<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">Naveed</div><div class="Desc">Description</div><a href="../Resume_naveed/Res.html">-Know more-</a></div>
+<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">HK</div><div class="Desc">Description</div><a>-Know more-</a></div>
+<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">Rahul</div><div class="Desc">Description</div><a>-Know more-</a></div>
+<div class="men"><div class="profileimg"><img src="rick.jpg"></div><div class="text">APN</div><div class="Desc">Description</div><a>-Know more-</a></div>
 
 </div>
 </body>
