--- a/landing.html
+++ b/landing.html
@@ -29,8 +29,11 @@
       <img src="landing2.png">
       <div class="landing-2-content">
         <h2>Check Out our interactive periodic table</h2>
-        <button>Check it Out</button>
+        <a href="periodic table/index.html"><button>Check it Out</button></a>
       </div>
+    </section>
+    <section class="footer">
+      
     </section>
   </div>
 </body>
