--- a/landing.html
+++ b/landing.html
@@ -15,6 +15,7 @@
       <a class="topbar-a topbar-a-2" href="equipment/equipment.html">Common Lab Equipments</a>
       <a class="topbar-a topbar-a-3" href="evolution/evolution.html">Evolution Of Periodic Table</a>
       <a class="topbar-a topbar-a-4" href="../fax.html">Facts n Memes</a>
+      <a class="topbar-a topbar-a-5" href="feedback/feedback.html">Feedback</a>
     </div>
   </section>
   <div class="landing">
