--- a/feedback.html
+++ b/feedback.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="feedback.css">
 </head>
 <body>
-    <div class="main">
-        <section id="topbar">
-          <div><h3 class="logo"><a href="landing.html">Elemental<span>X</span></a></h3></div>
-          <div class="topbar-btn">
-            <a class="topbar-a topbar-a-1" href="index.html">Periodic Table</a>
-            <a class="topbar-a topbar-a-2" href="equipment.html">Common Lab Equipments</a>
-            <a class="topbar-a topbar-a-3" href="evolution.html">Evolution Of Periodic Table</a>
-            <a class="topbar-a topbar-a-4" href="fax.html">Facts n Memes</a>
-          </div>
-        </section>
+  <section id="topbar">
+    <div><h3 class="logo"><a href="landing.html">Elemental<span>X</span></a></h3></div>
+    <div class="topbar-btn">
+      <a class="topbar-a topbar-a-1" href="periodic table/index.html">Periodic Table</a>
+      <a class="topbar-a topbar-a-2" href="equipment/equipment.html">Common Lab Equipments</a>
+      <a class="topbar-a topbar-a-3" href="evolution/evolution.html">Evolution Of Periodic Table</a>
+      <a class="topbar-a topbar-a-4" href="../fax.html">Facts n Memes</a>
+    </div>
+  </section>
     <div class="main1" id="main1">
     <div class="header">
         <h2>Hey! Thanks for visiting us.</h2>
