--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,6 @@
       <a class="topbar-a topbar-a-1" href="periodic table/index.html">Periodic Table</a>
       <a class="topbar-a topbar-a-2" href="equipment/equipment.html">Common Lab Equipments</a>
       <a class="topbar-a topbar-a-3" href="evolution/evolution.html">Evolution Of Periodic Table</a>
-      <a class="topbar-a topbar-a-4" href="../fax.html">Facts n Memes</a>
     </div>
   </section>
     <div class="main1" id="main1">
@@ -57,7 +56,7 @@
   </div>
   <div class="popup" id="popup">
     <h2>Thank You</h2> 
-    <img src="check-mark.png" alt="" style="width: 2vw;">
+    <img src="check-mark.png">
     <p>Your feedback have been submitted</p> 
     <button class="done" onclick="closepop()">Ok</button>
   </div>
