--- a/landing.html
+++ b/landing.html
@@ -31,9 +31,11 @@
         <a href="periodic table/index.html"><button>Check it Out</button></a>
       </div>
     </section>
-    <section class="footer">
+    <footer class="footer">
       
-    </section>
+      <a class="footer-a"><button>About Us</button></a>
+      <a class="footer-a"><button>Feedback</button></a>
+    </footer>
   </div>
 </body>
 </html>
