--- a/About page/About.html
+++ b/About page/About.html
@@ -5,21 +5,19 @@
     <link rel="stylesheet" href="About.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="tp.js" defer></script>
-    <title>among us</title>
+    <title>About Us</title>
 </head>
 <body>
     <section id="topbar">
-        <div><h3 class="logo">Elemental<span>X</span></h3></div>
+        <div><h3 class="logo"><a href="../landing.html">Elemental<span>X</span></a></h3></div>
         <div class="topbar-btn">
-        <a class="topbar-a topbar-a-1" href="../periodic table/index.html">Periodic Table</a>
-        <a class="topbar-a topbar-a-2" href="../equipment/equipment.html">Common Lab Equipments</a>
-        <a class="topbar-a topbar-a-3" href="../evolution/evolution.html">Evolution Of Periodic Table</a>
-        <a class="topbar-a topbar-a-4" href="../About page/About.html">Facts n Memes</a>
+          <a class="topbar-a topbar-a-1" href="periodic table/index.html">Periodic Table</a>
+          <a class="topbar-a topbar-a-2" href="equipment/equipment.html">Common Lab Equipments</a>
+          <a class="topbar-a topbar-a-3" href="evolution/evolution.html">Evolution Of Periodic Table</a>
         </div>
       </section>
 <div id="top-cont">
 <div id="top-text" >
-
     <h2 >Hello there!</h2>
     <p>Empowering Your Chemistry Journey: Introducing the Minds Supporting Your Exploration!</p>
 </div> 
