--- a/landing.html
+++ b/landing.html
@@ -32,9 +32,9 @@
       </div>
     </section>
     <footer class="footer">
-      
-      <a class="footer-a"><button>About Us</button></a>
-      <a class="footer-a"><button>Feedback</button></a>
+
+      <a class="footer-a" href="About page/About.html"><button>About Us</button></a>
+      <a class="footer-a" href="feedback.html"><button>Feedback</button></a>
     </footer>
   </div>
 </body>
