--- a/About page/About.html
+++ b/About page/About.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="topbar">
-        <div><h3 class="logo"><a href="../landing.html">Elemental<span>X</span></a></h3></div>
+        <div><h3 class="logo"><a href="../index.html">Elemental<span>X</span></a></h3></div>
         <div class="topbar-btn">
           <a class="topbar-a topbar-a-1" href="periodic table/index.html">Periodic Table</a>
           <a class="topbar-a topbar-a-2" href="equipment/equipment.html">Common Lab Equipments</a>
