--- a/equipment/equipment.html
+++ b/equipment/equipment.html
@@ -11,7 +11,7 @@
 <body>
     <section id="topbar">
         <div>
-            <h3 class="logo"><a href="../landing.html">Elemental<span>X</span></a></h3>
+            <h3 class="logo"><a href="../index.html">Elemental<span>X</span></a></h3>
         </div>
         <div class="topbar-btn">
           <a class="topbar-a topbar-a-1" href="../periodic table/index.html">Periodic Table</a>
